--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -24,6 +24,8 @@ services:
     depends_on:
       - postgres
     command: npm run start:dev
+    networks:
+      - app_network
 
   migrate:
     build:
@@ -41,6 +43,8 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
       POSTGRES_DB: ${POSTGRES_DB:-rx_dev}
     command: ['npm', 'run', 'migrate:run']
+    networks:
+      - app_network
 
   postgres:
     image: postgres:16
@@ -51,6 +55,12 @@ services:
       POSTGRES_DB: ${POSTGRES_DB:-rx_dev}
     volumes:
       - postgres_data_dev:/var/lib/postgresql/data
+    networks:
+      - app_network
 
 volumes:
   postgres_data_dev:
+
+networks:
+  app_network:
+    driver: bridge
