--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -21,6 +21,8 @@ services:
     depends_on:
       - postgres
     command: npm run start:prod
+    networks:
+      - app_network
 
   migrate:
     build:
@@ -38,6 +40,8 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
       POSTGRES_DB: ${POSTGRES_DB:-rx_prod}
     command: ['npm', 'run', 'migrate:run']
+    networks:
+      - app_network
 
   postgres:
     image: postgres:16
@@ -49,6 +53,12 @@ services:
       POSTGRES_DB: ${POSTGRES_DB:-rx_prod}
     volumes:
       - ../postgres_data_prod:/var/lib/postgresql/data
+    networks:
+      - app_network
 
 volumes:
   postgres_data_prod:
+
+networks:
+  app_network:
+    driver: bridge
