--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ bsc:
   testnet:
     rpcUrl: 'https://data-seed-prebsc-1-s1.binance.org:8545'
     chainId: 97
-    gaslessRelayerContractAddress: ''
+    gaslessRelayerContractAddress: '0xc78975453B24890ffB170fA98Eb7Bb94A1ce0e96'
   mainnet:
     rpcUrl: 'https://bsc-dataseed.binance.org'
     chainId: 56
