--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "docker:prod:logs": "docker compose -f docker-compose.prod.yml logs -f"
   },
   "dependencies": {
+    "@nestjs/bullmq": "^11.0.2",
     "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "^11.0.3",
     "@nestjs/config": "^4.0.0",
@@ -54,6 +55,7 @@
     "@nestjs/swagger": "^11.0.2",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.7.7",
+    "bullmq": "^5.51.0",
     "cache-manager": "^6.3.2",
     "cache-manager-redis-store": "3.0.1",
     "class-transformer": "^0.5.1",
@@ -62,6 +64,7 @@
     "dayjs": "1.11.9",
     "ethers": "^6.13.4",
     "helmet": "^8.0.0",
+    "ioredis": "^5.6.1",
     "joi": "^17.13.3",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
