chore: fix audit ci failure

--- a/audit-ci.jsonc
+++ b/audit-ci.jsonc
@@ -8,6 +8,7 @@
     "GHSA-hc6q-2mpp-qw7j",
     "GHSA-jr5f-v2jv-69x6",
     "GHSA-968p-4wvh-cqc8",
-    "GHSA-cj7v-w2c7-cp7c"
+    "GHSA-cj7v-w2c7-cp7c",
+    "GHSA-75v8-2h7p-7m2m"
   ]
 }
