--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,9 @@ bsc:
     rpcUrl: 'https://data-seed-prebsc-1-s1.binance.org:8545'
     chainId: 97
     gaslessRelayerContractAddress: '0xc78975453B24890ffB170fA98Eb7Bb94A1ce0e96'
+    subscriptionContractAddress: '0x0000000000000000000000000000000000000000'
   mainnet:
     rpcUrl: 'https://bsc-dataseed.binance.org'
     chainId: 56
-    gaslessRelayerContractAddress: ''
+    gaslessRelayerContractAddress: '0x0000000000000000000000000000000000000000'
+    subscriptionContractAddress: '0x0000000000000000000000000000000000000000'
